--- a/BioMerei.html
+++ b/BioMerei.html
@@ -10,7 +10,7 @@
     <h1>Merei Zhumabek</h1>
     <h1><i>"Freude am Fahren"</i></h1>
     <img src="2023-04-04 12.19.06.jpg" alt="GG">
-    <p>Hello, my name is Zhumabek Merei Seitovich. My hobby is going to Gym and to study cars, to learn something new about him. In free time, i like to watch movies, TV series and drives a car at night with music. </p>
+    <p>Hi, my name is Zhumabek Merey Seitovich. I was born in Astana and I still live here with my family. I used to play football, hockey and basketball, I like to watch the matches of the HC Barys team. I also like to do something new that can inspire. My hobby now is going to the gym and studying cars to learn something new about them. In my free time, I like to watch movies, TV series and drive a car at night with music.</p>
     <div class="quote">"Don't do unto others what you would not have done unto you."</div>
     <div class="section">
       <img src="photo_2023-04-04 11.33.47.jpeg" alt="GG">
