--- a/final_main.html
+++ b/final_main.html
@@ -13,7 +13,7 @@
 		<p>Future Chess Grandmaster</p>
 		<p class="quote">"Play stupid games, win stupid prizes"</p>
 		<a href="ali.html" class="button">View Bio</a>
-	</div>
+	</div>f
 	<div class="section">
 		<h2>Merei Zhumabek</h2>
 		<img src="2023-04-04 12.19.06.jpg" alt="Merei">
